--- a/src/trunk/GRAPHO_SYSTEMS/src/views/ods/Administracion_Pagos.mxml
+++ b/src/trunk/GRAPHO_SYSTEMS/src/views/ods/Administracion_Pagos.mxml
@@ -3,61 +3,74 @@
 			   xmlns:s="library://ns.adobe.com/flex/spark"
 			   xmlns:mx="library://ns.adobe.com/flex/mx"
 			   xmlns:components="views.components.*"
-			   width="742" height="458" horizontalCenter="0"
-			   title="Refacciones">
+			   width="735" height="608" horizontalCenter="0"
+			   title="Administración de Pagos">
 	
 	
-	<s:TextInput x="118" y="10" id="_nombre" change="dataChange();" width="247" tabIndex="1"/>
-	<s:TextInput x="118" y="43" id="_noParte" change="dataChange();" width="247" tabIndex="1"/>
-	<s:Label x="10" y="48" width="100" height="16" fontStyle="normal"
-			 text="No. Parte:" textAlign="right"
-			 verticalAlign="middle"/>
-	<s:TextInput x="118" y="76" id="_precio" change="dataChange();" width="133" tabIndex="1"/>
-	<s:Label x="10" y="80" width="100" height="16" fontStyle="normal"
-			 text="Precio :" textAlign="right"
-			 verticalAlign="middle"/>
-	<s:Label x="371" y="12" width="75" height="16" fontStyle="normal"
-			 text="Referencias:" textAlign="right"
-			 verticalAlign="middle"/>
-	
-	<s:DataGrid id="_dataList" y="209" left="19" right="15" height="156" dataProvider="{_DataResult}"
+	<s:DataGrid id="_dataList" y="356" left="15" right="26" height="156"
+				contentBackgroundColor="#D5FBDB" dataProvider="{_DataResult}"
 				enabled="{_dataReady&amp;&amp;!_newData&amp;&amp;!_updateData}"
 				selectionChange="onDataSelect();" selectionMode="singleRow">
 		<s:columns>	
 			<s:ArrayList>
-				<s:GridColumn headerText="Nombre" dataField="_nombre" ></s:GridColumn>	
+				<s:GridColumn headerText="No. Factura" dataField="_noFactura" ></s:GridColumn>	
+				<s:GridColumn dataField="_totalFacturar" headerText="Monto"></s:GridColumn>
+				<s:GridColumn dataField="_noRemision" headerText="No. Remision"></s:GridColumn>
+				<s:GridColumn dataField="_totalRemisionar" headerText="Monto Remisión"></s:GridColumn>
 			</s:ArrayList>
 		</s:columns>
 	</s:DataGrid>
-	<s:Button visible="{!_newData&amp;&amp;!_updateData}" left="19" bottom="10" width="80"
+	<s:Button visible="{!_newData&amp;&amp;!_updateData}" left="15" bottom="10" width="80"
 			  height="30" label="{SystemGlobals.LABELS[5][SystemGlobals.LANGUAGE]}"
-			  click="newData();" enabled="{_dataReady&amp;&amp;_idsRefacciones==null}"/>
-	<s:Button visible="{_newData||_updateData}" left="107" bottom="10" width="80" height="30"
+			  click="newData();" enabled="{_dataReady}"/>
+	<s:Button visible="{_newData||_updateData}" left="103" bottom="10" width="80" height="30"
 			  label="{SystemGlobals.LABELS[7][SystemGlobals.LANGUAGE]}" click="cancel();"
 			  enabled="{_dataReady}"/>
-	<s:Button visible="{_newData}" left="19" bottom="10" width="80" height="30"
+	<s:Button visible="{_newData}" left="15" bottom="10" width="80" height="30"
 			  label="{SystemGlobals.LABELS[10][SystemGlobals.LANGUAGE]}" click="createData();"
 			  enabled="{_dataReady}"/>
-	<s:Button visible="{!_newData&amp;&amp;!_updateData}" left="107" bottom="10" width="80"
+	<s:Button visible="{!_newData&amp;&amp;!_updateData}" left="103" bottom="10" width="80"
 			  height="30" label="{SystemGlobals.LABELS[6][SystemGlobals.LANGUAGE]}"
-			  click="deleteDataAlert();" enabled="{_dataReady&amp;&amp;!_newData&amp;&amp;_idsRefacciones==null}"/>
-	<s:Button visible="{_updateData&amp;&amp;!_newData}" left="19" bottom="10" width="80" height="30"
+			  click="deleteDataAlert();" enabled="{_dataReady&amp;&amp;!_newData}"/>
+	<s:Button visible="{_updateData&amp;&amp;!_newData}" left="15" bottom="10" width="80" height="30"
 			  label="{SystemGlobals.LABELS[8][SystemGlobals.LANGUAGE]}" click="updateData();"
 			  enabled="{_dataReady&amp;&amp;!_newData&amp;&amp;_updateData}"/>
-	<s:Button right="15" bottom="10" width="145" height="30"
+	<s:Button right="26" bottom="10" width="145" height="30"
 			  label="{SystemGlobals.LABELS[9][SystemGlobals.LANGUAGE]}" click="closeWindow();"
 			  enabled="{!_newData}"/>
 	
-	<s:ComboBox id="_searchType" y="165" left="86" width="107" dataProvider="{_searchTypes}"
-				tabIndex="2"/>
-	<s:TextInput id="_searchField" y="165" left="201" width="131" change="search();"
-				 enabled="{!_newData}" tabIndex="3"/>
-	<s:Label y="170" left="-26" width="105" text="{SystemGlobals.LABELS[4][SystemGlobals.LANGUAGE]} :"
+	<s:ComboBox id="_searchType" y="325" left="438" width="132" contentBackgroundColor="#D5FBDB"
+				dataProvider="{_searchTypes}" tabIndex="2"/>
+	<s:TextInput id="_searchField" y="325" left="578" width="131" change="search();"
+				 contentBackgroundColor="#D5FBDB" enabled="{!_newData}" tabIndex="3"/>
+	<s:Label y="330" left="326" width="105" text="{SystemGlobals.LABELS[4][SystemGlobals.LANGUAGE]} :"
 			 textAlign="right"/>
-	<s:Label x="10" y="12" width="100" height="16" fontStyle="normal"
-			 text="Nombre :" textAlign="right"
-			 verticalAlign="middle"/>
-	<s:TextArea id="_referencias" x="451" y="10" width="276" height="177" change="dataChange();"/>
+	<s:Label x="28" y="78" text="Observaciones :"/>
+	<s:TextArea id="_observacionesFac" x="124" y="71" width="586" height="78" change="dataChange();"
+				contentBackgroundColor="#D5FBDB" tabIndex="5"/>
+	<s:Label x="50" y="41" text="No Factura :"/>
+	<s:TextInput id="_noFactura" x="124" y="34" width="69" change="dataChange();"
+				 contentBackgroundColor="#D5FBDB" fontStyle="normal" tabIndex="1"/>
+	<s:Label x="198" y="40" text="Monto Factura :"/>
+	<s:TextInput id="_totalFacturar" x="285" y="34" width="60" change="dataChange();"
+				 contentBackgroundColor="#D5FBDB" fontStyle="normal" tabIndex="2"/>
+	<s:Label x="357" y="41" text="No Remisión :"/>
+	<s:TextInput id="_noRemision" x="442" y="35" width="69" change="dataChange();"
+				 contentBackgroundColor="#D5FBDB" fontStyle="normal" tabIndex="3"/>
+	<s:Label x="519" y="41" text="Monto a Remisionar :"/>
+	<s:TextInput id="_totalRemisionar" x="641" y="35" width="69" change="dataChange();"
+				 contentBackgroundColor="#D5FBDB" fontStyle="normal" tabIndex="4"/>
+	<s:Label x="28" y="236" text="Observaciones :"/>
+	<s:TextArea id="_observacionesCompl" x="124" y="229" width="586" height="78"
+				change="dataChange();" contentBackgroundColor="#D5FBDB" tabIndex="8"/>
+	<s:Label x="10" y="199" text="Fecha de depóstio :"/>
+	<s:TextInput id="_fechaDeposito" x="124" y="192" width="70" change="dataChange();"
+				 contentBackgroundColor="#D5FBDB" fontStyle="normal" tabIndex="6"/>
+	<s:Button x="202" y="192" width="49" height="23" label="Hoy" click="getCurrentTime2();"/>
+	<s:Label x="258" y="199" text="Forma de Pago :"/>
+	<s:ComboBox id="_formaPago" x="358" y="191" width="127" change="dataChange();"
+				contentBackgroundColor="#D5FBDB" dataProvider="{ConstantData.PaymentTypes}"
+				fontStyle="italic" labelField="label" tabIndex="7"> </s:ComboBox>
 	
 	<fx:Script>
 		<![CDATA[
@@ -77,6 +90,7 @@
 			import mx.rpc.events.FaultEvent;
 			import mx.rpc.events.ResultEvent;
 			import mx.rpc.remoting.RemoteObject;
+			import mx.random.constants.ConstantData;
 			
 			private var _webApplication:WebApplication;
 			private var Valid:Validator 			= new Validator();
@@ -100,13 +114,11 @@
 			
 			private var _selectedId:Number 		= 0;
 			private var _selectedName:String 	= "";
-			private var _serviceName  			= "Refacciones";
-			private var _mainId  				= "_idRefaccion";
-			private var _mainFocusField:String 	= "_nombre";
+			private var _serviceName  			= "Administracion_Pago";
+			private var _mainId  				= "_idPago";
+			private var _mainFocusField:String 	= "_noFactura";
+			private var _idOrdenSelected:Number = -1;
 			
-			private var _idEquipo = -1;
-			private var _idsRefacciones = null; //stores a list of a spare parts the need to be displayed in the grid
-			private var _idsPrediagnosticos = null;
 			//-----------Local Vars -----------
 			
 			//---------------------------- Context ---------------------------------------------            
@@ -123,22 +135,15 @@
 				_workManager = value;
 			}
 			
-			public function set idEquipo(value:Object):void{
-				_idEquipo = value;
-			}
-			
-			public function set idsRefacciones(value:Object):void{//Indicates a list of ids that need to be displayed, these need to be the only in the grid
-				_idsRefacciones = value;
-			}
-			
-			public function set idsPrediagnosticos(value:Object):void{
-				_idsPrediagnosticos = value;
-			}
-			
 			public function set webApplication(value:WebApplication):void{
 				_webApplication = value;
 				initView();
 			}
+			
+			public function set idOrden(value:Number):void{
+				_idOrdenSelected = value;
+			}
+			
 			public function get webApplication():WebApplication{ return _webApplication; } 
 			
 			//---------------------------- Context ---------------------------------------------  
@@ -156,7 +161,7 @@
 				Valid.changeLanguage(Languages.SPANISH);
 				
 				//----------- Validaciones ---------------------------
-				Valid.addStringVal(_nombre,1,100,"Nombre");
+				//Valid.addStringVal(_nombreTipo,1,100,"Nombre");
 				
 				//----------- Validaciones ---------------------------
 				
@@ -171,7 +176,7 @@
 			
 			private function extraCreateData(params:Object):Object{				
 				//params["_newsImage"] = _image;
-				params["_idEquipo"] = _idEquipo;
+				params["_idOrden"] = _idOrdenSelected;
 				return params;
 			}
 			
@@ -180,7 +185,7 @@
 			}
 			
 			private function extraUpdateData(params:Object):Object{	
-				//params['_color'] = areaColor.selectedColor;	
+				//params['_color'] = areaColor.selectedColor;			
 				return params;
 			}
 			
@@ -195,7 +200,7 @@
 			public function initView():void{
 				forceImports();
 				_MainService = _webApplication.getService(_serviceName);
-				_Data.exceptions = ["_idRefaccion","_fechaCreacion","_idEquipo"];
+				_Data.exceptions = ["_idPago","_idOrden"];
 				_MainService.addEventListener(FaultEvent.FAULT,onFault);
 				initData();
 				addValidations();
@@ -250,12 +255,6 @@
 					params[_mainId] = _dataList.selectedItem[_mainId];
 					_MainService.updateRecord(params);
 					_MainService.updateRecord.addEventListener(ResultEvent.RESULT,onUpdateComplete);
-					if(this._idsRefacciones != null){
-						if(_idsPrediagnosticos != null && _idsPrediagnosticos.length > 0){
-							_MainService.updateSparePartPrize(_idsPrediagnosticos.join(","),params[_mainId],params['_precio']);	
-							_MainService.updateSparePartPrize.addEventListener(ResultEvent.RESULT,onUpdateSparePartPrizeComplete);
-						}
-					}
 					_dataIndex =_dataList.selectedIndex;
 				}else{
 					Alert.show(Valid.errors,"Error");
@@ -295,6 +294,12 @@
 				_updateData = true;
 			}
 			
+			private function getCurrentTime2():void{
+				var currentDateTime:Date = new Date();
+				_fechaDeposito.text = currentDateTime.fullYear + "-" + (currentDateTime.month+1) + "-" + currentDateTime.date;
+				dataChange();
+			}
+			
 			private function openImageEditor():void{
 				if(_dataList.selectedIndex!=-1){
 					//_newsIdNumber 	= new Number(_dataList.selectedItem._blogId);
@@ -322,11 +327,7 @@
 			}
 			
 			private function getData():void{
-				if(_idsRefacciones != null){
-					_MainService.getRecords(_idEquipo,_idsRefacciones.join(","));	
-				}else{
-					_MainService.getRecords(_idEquipo);
-				}				
+				_MainService.getRecords(_idOrdenSelected);
 				_MainService.getRecords.addEventListener(ResultEvent.RESULT,onGetDataResult);
 			}
 			
@@ -339,6 +340,7 @@
 					if(_dataIndex<0) _dataIndex = 0;
 					_Data.loadData(_DataResult[_dataIndex]);
 					_dataList.selectedIndex = _dataIndex;
+					_dataList.setSelectedIndex(_dataList.selectedIndex);
 					_dataList.setSelectedIndex(_dataList.selectedIndex);
 					loadExtraFields(_DataResult[_dataIndex]);
 				}
@@ -362,25 +364,20 @@
 			private function onCreateComplete(e:ResultEvent):void{				
 				_MainService.createRecord.removeEventListener(ResultEvent.RESULT,onCreateComplete);
 				_dataIndex = _DataResult.length;
-				Catalogs.reloadSpecificTables(["refacciones"]);
+				Catalogs.reloadSpecificTables(["tipos_equipo"]);
 				getData();
 			}
 			
 			private function onUpdateComplete(e:ResultEvent):void{
 				_MainService.updateRecord.removeEventListener(ResultEvent.RESULT,onUpdateComplete);
-				Catalogs.reloadSpecificTables(["refacciones"]);
+				Catalogs.reloadSpecificTables(["tipos_equipo"]);
 				getData();
-			}
-			
-			private function onUpdateSparePartPrizeComplete(e:ResultEvent):void{
-				_MainService.updateSparePartPrize.removeEventListener(ResultEvent.RESULT,onUpdateSparePartPrizeComplete);
-				//getData();
 			}
 			
 			private function onDeleteComplete(e:ResultEvent):void{
 				_MainService.deleteRecord.removeEventListener(ResultEvent.RESULT,onDeleteComplete);
 				_dataIndex = _DataResult.length-2;
-				Catalogs.reloadSpecificTables(["refacciones"]);
+				Catalogs.reloadSpecificTables(["tipos_equipo"]);
 				getData();
 			}
 			
@@ -422,7 +419,7 @@
 				searchFilter();
 			}
 			private var _searchFilter:String 			= new String();
-			[Bindable]	private var _searchTypes:ArrayCollection 	= new ArrayCollection([{label:"Nombre", value:"_nombre"}]);
+			[Bindable]	private var _searchTypes:ArrayCollection 	= new ArrayCollection([{label:"Nombre", value:"_nombreTipo"}]);
 			
 			//-------------------------------- Search Engine --------------------------------------					
 			
