--- a/src/trunk/GRAPHO_SYSTEMS/src/views/equipos/Codigo_Error.mxml
+++ b/src/trunk/GRAPHO_SYSTEMS/src/views/equipos/Codigo_Error.mxml
@@ -5,7 +5,7 @@
 	xmlns:mx="library://ns.adobe.com/flex/mx"
 	width="428" height="478"  
 	horizontalCenter="0" 
-	title="Error de Error de Equipos" 
+	title="Códigos de Error" 
 	>
 
 	<s:TextInput x="118" y="10" id="_codigoError" change="dataChange();" width="127" tabIndex="1"/>
@@ -14,7 +14,7 @@
 	<s:ComboBox 	x="119" id="_searchType" 	dataProvider="{_searchTypes}" 	width="126" y="132" tabIndex="4"/>
 	<s:TextInput 	x="261" id="_searchField" 	change="search();" 		width="157" enabled="{!_newData}" y="133" tabIndex="5"/>
 	
-	<s:Label y="44" right="318" width="101" text="Descripcion:" textAlign="right"/>
+	<s:Label y="44" right="318" width="101" text="Descripción:" textAlign="right"/>
 
 
 	<s:DataGrid id="_dataList" left="10" right="10" bottom="48" height="222"
@@ -51,7 +51,7 @@
 	<s:Label y="138" right="316" width="105"
 			 text="{SystemGlobals.LABELS[4][SystemGlobals.LANGUAGE]} :" textAlign="right"/>
 	<s:Label x="10" y="12" width="100" height="16" fontStyle="normal"
-			 text="Codigo Error:" textAlign="right"
+			 text="Código Error:" textAlign="right"
 			 verticalAlign="middle"/>
 	
 	<s:Label y="108" right="316" width="101" text="Equipo:" textAlign="right"/>
