--- a/src/trunk/GRAPHO_SYSTEMS/src/views/equipos/Equipos.mxml
+++ b/src/trunk/GRAPHO_SYSTEMS/src/views/equipos/Equipos.mxml
@@ -3,22 +3,22 @@
 			   xmlns:s="library://ns.adobe.com/flex/spark"
 			   xmlns:mx="library://ns.adobe.com/flex/mx"
 			   xmlns:components="views.components.*"
-			   width="584" height="510" horizontalCenter="0"
+			   width="584" height="522" horizontalCenter="0"
 			   title="Equipos">
 
-	<s:TextInput x="118" y="10" id="_nombreEquipo" change="dataChange();" width="151" tabIndex="1"/>
-	<s:TextInput x="399" y="9" id="_modelo" change="dataChange();" width="175" tabIndex="2"/>
-	<s:TextInput x="118" y="40" id="_serie" change="dataChange();" width="150" tabIndex="3"/>
-	<s:TextInput x="399" y="39" id="_anioFabricacion" change="dataChange();" width="175" maxChars="4" restrict="0-9"  tabIndex="4"/>
+	<s:TextInput x="118" y="10" id="_nombreEquipo" change="dataChange();" width="456" tabIndex="1"/>
+	<s:TextInput x="384" y="72" id="_modelo" change="dataChange();" width="152" tabIndex="2"/>
+	<s:TextInput x="118" y="103" id="_serie" change="dataChange();" width="187" tabIndex="3"/>
+	<s:TextInput x="118" y="133" id="_anioFabricacion" change="dataChange();" width="187" maxChars="4" restrict="0-9"  tabIndex="4"/>
 
-	<s:ComboBox 	x="118" id="_idMarca" 	labelField="_nombreMarca" dataProvider="{SystemGlobals.MARCAS}" change="dataChange();"	width="149" y="70" tabIndex="5"/>
-	<s:ComboBox 	x="399" id="_idTipoEquipo" labelField="_nombreTipo" dataProvider="{SystemGlobals.TIPOS_EQUIPOS}" change="dataChange();"	width="137" y="69" tabIndex="6"/>
-	<s:ComboBox 	x="120" id="_searchType" 	dataProvider="{_searchTypes}" 	width="148" y="152" tabIndex="7"/>
-	<s:TextInput 	x="276" id="_searchField" 	change="search();" 		width="298" enabled="{!_newData}" y="152" tabIndex="8"/>
+	<s:ComboBox 	x="118" id="_idMarca" 	labelField="_nombreMarca" dataProvider="{SystemGlobals.MARCAS}" change="dataChange();"	width="149" y="72" tabIndex="5"/>
+	<s:ComboBox 	x="384" id="_idTipoEquipo" labelField="_nombreTipo" dataProvider="{SystemGlobals.TIPOS_EQUIPOS}" change="dataChange();"	width="152" y="41" tabIndex="6"/>
+	<s:ComboBox 	x="227" id="_searchType" 	dataProvider="{_searchTypes}" 	width="148" y="168" tabIndex="7"/>
+	<s:TextInput 	x="384" id="_searchField" 	change="search();" 		width="189" enabled="{!_newData}" y="169" tabIndex="8"/>
 	
 	
-	<s:Label y="14" right="193" width="101" text="Modelo:" textAlign="right"/>
-	<s:Label y="47" right="473" width="101" text="No. Serie:" textAlign="right"/>
+	<s:Label y="77" right="208" width="70" text="Modelo:" textAlign="right"/>
+	<s:Label y="110" right="473" width="101" text="No. Serie:" textAlign="right"/>
 
 
 	<s:DataGrid id="_dataList" left="10" right="10" bottom="50" height="233"
@@ -52,28 +52,34 @@
 	<s:Button right="10" bottom="10" width="145" height="30"
 			  label="{SystemGlobals.LABELS[9][SystemGlobals.LANGUAGE]}" click="closeWindow();"
 			  enabled="{!_newData}"/>
-	<s:Button x="275" y="69" width="30" height="23"
+	<s:Button x="275" y="73" width="30" height="23"
 			  click="openPopUp(&quot;equipos.Marcas&quot;,true);"
 			  icon="@Embed(source='../../assets/Icons/Buttons/Edit.png')"
 			  skinClass="spark.skins.spark.ButtonSkin"/>
-	<s:Button x="544" y="68" width="30" height="23"
+	<s:Button x="275" y="42" width="30" height="23"
+			  click="openPopUp(&quot;productos.Productos_Familias&quot;,true);"
+			  icon="@Embed(source='../../assets/Icons/Buttons/Edit.png')"
+			  skinClass="spark.skins.spark.ButtonSkin"/>
+	<s:Button x="544" y="41" width="30" height="23"
 			  click="openPopUp(&quot;equipos.Tipos_Equipos&quot;,true);"
 			  icon="@Embed(source='../../assets/Icons/Buttons/Edit.png')"
 			  skinClass="spark.skins.spark.ButtonSkin"/>
 	
 	
-	<s:Label y="76" right="191" width="101" text="Tipo Equipo:" textAlign="right"/>
+	<s:Label y="47" right="207" width="70" text="Tecnología :" textAlign="right"/>
 	
-	<s:Label y="158" right="468" width="105"
+	<s:Label y="174" right="361" width="105"
 			 text="{SystemGlobals.LABELS[4][SystemGlobals.LANGUAGE]} :" textAlign="right"/>
 	<s:Label x="10" y="12" width="100" height="16" fontStyle="normal"
 			 text="Descripción:" textAlign="right"
 			 verticalAlign="middle"/>
-	<s:Label y="47" right="192" width="101" text="Año:" textAlign="right"/>
-	<s:Label y="76" right="473" width="101" text="Marca:" textAlign="right"/>
-	<s:Button x="400" y="102" label="Refacciones" width="174"
+	<s:Label y="141" right="473" width="101" text="Año:" textAlign="right"/>
+	<s:Label y="77" right="475" width="101" text="Fabricante :" textAlign="right"/>
+	<s:Button x="384" y="101" label="Refacciones" width="174"
 			  click="openPopUp(&quot;equipos.Refacciones&quot;,true);"
 			  enabled="{_dataReady&amp;&amp;!_newData&amp;&amp;!_updateData}" />
+	<s:ComboBox 	x="118" id="_idFamilia" 	labelField="_nombre" dataProvider="{SystemGlobals.PRODUCTOS_FAMILIAS}" change="dataChange();"	width="150" y="41" tabIndex="5"/>
+	<s:Label y="47" right="473" width="101" text="Familia :" textAlign="right"/>
 	
 	
 	
@@ -164,9 +170,13 @@
 			
 			private function get viewContext():Object{
 				if(_dataIndex<0) _dataIndex = 0;
+				var idEquipo = null;
+				if(_DataResult != null && _DataResult.length > 0){
+					idEquipo = _DataResult[_dataIndex]._idEquipo;	
+				}
 				return {webApplication: _webApplication,
 					workManager: this, idClient:Number, 
-					idEquipo:_DataResult[_dataIndex]._idEquipo
+					idEquipo:idEquipo
 				}					
 			}
 			
