--- a/src/trunk/GRAPHO_SYSTEMS/src/views/fallas/Biblioteca_Fallas.mxml
+++ b/src/trunk/GRAPHO_SYSTEMS/src/views/fallas/Biblioteca_Fallas.mxml
@@ -3,61 +3,49 @@
 			   xmlns:s="library://ns.adobe.com/flex/spark"
 			   xmlns:mx="library://ns.adobe.com/flex/mx"
 			   xmlns:components="views.components.*"
-			   width="742" height="458" horizontalCenter="0"
-			   title="Refacciones">
+			   width="534" height="428" horizontalCenter="0"
+			   title="Biblioteca de Fallas">
 	
 	
-	<s:TextInput x="118" y="10" id="_nombre" change="dataChange();" width="247" tabIndex="1"/>
-	<s:TextInput x="118" y="43" id="_noParte" change="dataChange();" width="247" tabIndex="1"/>
-	<s:Label x="10" y="48" width="100" height="16" fontStyle="normal"
-			 text="No. Parte:" textAlign="right"
-			 verticalAlign="middle"/>
-	<s:TextInput x="118" y="76" id="_precio" change="dataChange();" width="133" tabIndex="1"/>
-	<s:Label x="10" y="80" width="100" height="16" fontStyle="normal"
-			 text="Precio :" textAlign="right"
-			 verticalAlign="middle"/>
-	<s:Label x="371" y="12" width="75" height="16" fontStyle="normal"
-			 text="Referencias:" textAlign="right"
-			 verticalAlign="middle"/>
-	
-	<s:DataGrid id="_dataList" y="209" left="19" right="15" height="156" dataProvider="{_DataResult}"
+	<s:DataGrid id="_dataList" y="184" left="10" right="10" height="156" dataProvider="{_DataResult}"
 				enabled="{_dataReady&amp;&amp;!_newData&amp;&amp;!_updateData}"
 				selectionChange="onDataSelect();" selectionMode="singleRow">
 		<s:columns>	
 			<s:ArrayList>
-				<s:GridColumn headerText="Nombre" dataField="_nombre" ></s:GridColumn>	
+				<s:GridColumn dataField="_codigo" headerText="Código"></s:GridColumn>
+				<s:GridColumn dataField="_falla" headerText="Falla"></s:GridColumn>
 			</s:ArrayList>
 		</s:columns>
 	</s:DataGrid>
-	<s:Button visible="{!_newData&amp;&amp;!_updateData}" left="19" bottom="10" width="80"
+	<s:Button visible="{!_newData&amp;&amp;!_updateData}" left="10" bottom="10" width="80"
 			  height="30" label="{SystemGlobals.LABELS[5][SystemGlobals.LANGUAGE]}"
-			  click="newData();" enabled="{_dataReady&amp;&amp;_idsRefacciones==null}"/>
-	<s:Button visible="{_newData||_updateData}" left="107" bottom="10" width="80" height="30"
+			  click="newData();" enabled="{_dataReady}"/>
+	<s:Button visible="{_newData||_updateData}" left="98" bottom="10" width="80" height="30"
 			  label="{SystemGlobals.LABELS[7][SystemGlobals.LANGUAGE]}" click="cancel();"
 			  enabled="{_dataReady}"/>
-	<s:Button visible="{_newData}" left="19" bottom="10" width="80" height="30"
+	<s:Button visible="{_newData}" left="10" bottom="10" width="80" height="30"
 			  label="{SystemGlobals.LABELS[10][SystemGlobals.LANGUAGE]}" click="createData();"
 			  enabled="{_dataReady}"/>
-	<s:Button visible="{!_newData&amp;&amp;!_updateData}" left="107" bottom="10" width="80"
+	<s:Button visible="{!_newData&amp;&amp;!_updateData}" left="98" bottom="10" width="80"
 			  height="30" label="{SystemGlobals.LABELS[6][SystemGlobals.LANGUAGE]}"
-			  click="deleteDataAlert();" enabled="{_dataReady&amp;&amp;!_newData&amp;&amp;_idsRefacciones==null}"/>
-	<s:Button visible="{_updateData&amp;&amp;!_newData}" left="19" bottom="10" width="80" height="30"
+			  click="deleteDataAlert();" enabled="{_dataReady&amp;&amp;!_newData}"/>
+	<s:Button visible="{_updateData&amp;&amp;!_newData}" left="10" bottom="10" width="80" height="30"
 			  label="{SystemGlobals.LABELS[8][SystemGlobals.LANGUAGE]}" click="updateData();"
 			  enabled="{_dataReady&amp;&amp;!_newData&amp;&amp;_updateData}"/>
-	<s:Button right="15" bottom="10" width="145" height="30"
+	<s:Button right="10" bottom="10" width="145" height="30"
 			  label="{SystemGlobals.LABELS[9][SystemGlobals.LANGUAGE]}" click="closeWindow();"
 			  enabled="{!_newData}"/>
 	
-	<s:ComboBox id="_searchType" y="165" left="86" width="107" dataProvider="{_searchTypes}"
+	<s:ComboBox id="_searchType" y="153" left="261" width="107" dataProvider="{_searchTypes}"
 				tabIndex="2"/>
-	<s:TextInput id="_searchField" y="165" left="201" width="131" change="search();"
+	<s:TextInput id="_searchField" y="153" left="376" width="131" change="search();"
 				 enabled="{!_newData}" tabIndex="3"/>
-	<s:Label y="170" left="-26" width="105" text="{SystemGlobals.LABELS[4][SystemGlobals.LANGUAGE]} :"
+	<s:Label y="158" left="149" width="105" text="{SystemGlobals.LABELS[4][SystemGlobals.LANGUAGE]} :"
 			 textAlign="right"/>
-	<s:Label x="10" y="12" width="100" height="16" fontStyle="normal"
-			 text="Nombre :" textAlign="right"
-			 verticalAlign="middle"/>
-	<s:TextArea id="_referencias" x="451" y="10" width="276" height="177" change="dataChange();"/>
+	<s:TextInput id="_falla" x="91" y="40" width="416" change="dataChange();" prompt="Descripción"/>
+	<s:TextInput id="_codigo" x="91" y="10" width="79" change="dataChange();" prompt="Código"/>
+	<s:Label x="36" y="15" text="Código :"/>
+	<s:Label x="10" y="45" text="Descripción :"/>
 	
 	<fx:Script>
 		<![CDATA[
@@ -100,13 +88,11 @@
 			
 			private var _selectedId:Number 		= 0;
 			private var _selectedName:String 	= "";
-			private var _serviceName  			= "Refacciones";
-			private var _mainId  				= "_idRefaccion";
-			private var _mainFocusField:String 	= "_nombre";
+			private var _serviceName  			= "Biblioteca_Fallas";
+			private var _mainId  				= "_idOrdenFalla";
+			private var _mainFocusField:String 	= "_codigo";
 			
-			private var _idEquipo = -1;
-			private var _idsRefacciones = null; //stores a list of a spare parts the need to be displayed in the grid
-			private var _idsPrediagnosticos = null;
+			
 			//-----------Local Vars -----------
 			
 			//---------------------------- Context ---------------------------------------------            
@@ -121,18 +107,6 @@
 			
 			public function set workManager(value:Object):void{
 				_workManager = value;
-			}
-			
-			public function set idEquipo(value:Object):void{
-				_idEquipo = value;
-			}
-			
-			public function set idsRefacciones(value:Object):void{//Indicates a list of ids that need to be displayed, these need to be the only in the grid
-				_idsRefacciones = value;
-			}
-			
-			public function set idsPrediagnosticos(value:Object):void{
-				_idsPrediagnosticos = value;
 			}
 			
 			public function set webApplication(value:WebApplication):void{
@@ -156,7 +130,6 @@
 				Valid.changeLanguage(Languages.SPANISH);
 				
 				//----------- Validaciones ---------------------------
-				Valid.addStringVal(_nombre,1,100,"Nombre");
 				
 				//----------- Validaciones ---------------------------
 				
@@ -171,7 +144,6 @@
 			
 			private function extraCreateData(params:Object):Object{				
 				//params["_newsImage"] = _image;
-				params["_idEquipo"] = _idEquipo;
 				return params;
 			}
 			
@@ -180,7 +152,7 @@
 			}
 			
 			private function extraUpdateData(params:Object):Object{	
-				//params['_color'] = areaColor.selectedColor;	
+				//params['_color'] = areaColor.selectedColor;			
 				return params;
 			}
 			
@@ -195,7 +167,8 @@
 			public function initView():void{
 				forceImports();
 				_MainService = _webApplication.getService(_serviceName);
-				_Data.exceptions = ["_idRefaccion","_fechaCreacion","_idEquipo"];
+				_Data.exceptions = ["_idOrdenFalla","_idOrden","_creado","_modificado","_creadoPor",
+									"_modificadoPor","_idFamiliaFalla","_fallaReal","_reparacion","_referencia","_pruebas"];
 				_MainService.addEventListener(FaultEvent.FAULT,onFault);
 				initData();
 				addValidations();
@@ -250,12 +223,6 @@
 					params[_mainId] = _dataList.selectedItem[_mainId];
 					_MainService.updateRecord(params);
 					_MainService.updateRecord.addEventListener(ResultEvent.RESULT,onUpdateComplete);
-					if(this._idsRefacciones != null){
-						if(_idsPrediagnosticos != null && _idsPrediagnosticos.length > 0){
-							_MainService.updateSparePartPrize(_idsPrediagnosticos.join(","),params[_mainId],params['_precio']);	
-							_MainService.updateSparePartPrize.addEventListener(ResultEvent.RESULT,onUpdateSparePartPrizeComplete);
-						}
-					}
 					_dataIndex =_dataList.selectedIndex;
 				}else{
 					Alert.show(Valid.errors,"Error");
@@ -322,11 +289,7 @@
 			}
 			
 			private function getData():void{
-				if(_idsRefacciones != null){
-					_MainService.getRecords(_idEquipo,_idsRefacciones.join(","));	
-				}else{
-					_MainService.getRecords(_idEquipo);
-				}				
+				_MainService.getRecords();
 				_MainService.getRecords.addEventListener(ResultEvent.RESULT,onGetDataResult);
 			}
 			
@@ -362,25 +325,20 @@
 			private function onCreateComplete(e:ResultEvent):void{				
 				_MainService.createRecord.removeEventListener(ResultEvent.RESULT,onCreateComplete);
 				_dataIndex = _DataResult.length;
-				Catalogs.reloadSpecificTables(["refacciones"]);
+				//Catalogs.reloadSpecificTables(["marcas"]);
 				getData();
 			}
 			
 			private function onUpdateComplete(e:ResultEvent):void{
 				_MainService.updateRecord.removeEventListener(ResultEvent.RESULT,onUpdateComplete);
-				Catalogs.reloadSpecificTables(["refacciones"]);
+				//Catalogs.reloadSpecificTables(["marcas"]);
 				getData();
-			}
-			
-			private function onUpdateSparePartPrizeComplete(e:ResultEvent):void{
-				_MainService.updateSparePartPrize.removeEventListener(ResultEvent.RESULT,onUpdateSparePartPrizeComplete);
-				//getData();
 			}
 			
 			private function onDeleteComplete(e:ResultEvent):void{
 				_MainService.deleteRecord.removeEventListener(ResultEvent.RESULT,onDeleteComplete);
 				_dataIndex = _DataResult.length-2;
-				Catalogs.reloadSpecificTables(["refacciones"]);
+				//Catalogs.reloadSpecificTables(["marcas"]);
 				getData();
 			}
 			
@@ -422,7 +380,7 @@
 				searchFilter();
 			}
 			private var _searchFilter:String 			= new String();
-			[Bindable]	private var _searchTypes:ArrayCollection 	= new ArrayCollection([{label:"Nombre", value:"_nombre"}]);
+			[Bindable]	private var _searchTypes:ArrayCollection 	= new ArrayCollection([{label:"Nombre", value:"_nombreMarca"}]);
 			
 			//-------------------------------- Search Engine --------------------------------------					
 			
