--- a/src/trunk/GRAPHO_SYSTEMS/src/views/ods/Administracion_Ordenes.mxml
+++ b/src/trunk/GRAPHO_SYSTEMS/src/views/ods/Administracion_Ordenes.mxml
@@ -21,11 +21,10 @@
 				selectionChange="onDataSelect();">
 		<s:columns>
 			<s:ArrayList>
-				<s:GridColumn width="40" dataField="_idOrden" headerText="OS"></s:GridColumn>
-				<s:GridColumn width="80" dataField="_nombreEstatus"
-							  headerText="Est."></s:GridColumn>
-				<s:GridColumn width="80" dataField="_creado" headerText="Fecha"></s:GridColumn>
-				<s:GridColumn dataField="_nombreCliente" headerText="Cliente"></s:GridColumn>
+				<s:GridColumn width="60" dataField="_idOrden" headerText="OS"></s:GridColumn>
+				<s:GridColumn width="170" dataField="_idEstatus" headerText="Estatus"
+							  itemRenderer="renderers.AdministracionOrdenesEstatus"></s:GridColumn>
+				<s:GridColumn width="170" dataField="_fechaCreacion" headerText="Fecha"></s:GridColumn>
 			</s:ArrayList>
 		</s:columns>
 	</s:DataGrid>
@@ -40,12 +39,13 @@
 	<s:Label x="718" text="Filtrar por :" textAlign="right" y="39"/>
 	<s:ComboBox id="_idAreaSoporteTecnico" x="389" y="21" width="150" change="dataChange();"
 				dataProvider="{SystemGlobals.AREAS_SOPORTE}" fontWeight="bold"
-				labelField="_areaSoporteTecnico"></s:ComboBox>
+				labelField="_areaSoporteTecnico" tabIndex="2"></s:ComboBox>
 	<s:ComboBox id="_idTipoServicio" x="546" y="21" width="151" change="dataChange();"
-				dataProvider="{SystemGlobals.TIPOS_SERVICIO}" fontWeight="bold" labelField="_nombre"></s:ComboBox>
+				dataProvider="{SystemGlobals.TIPOS_SERVICIO}" fontWeight="bold" labelField="_nombre"
+				tabIndex="3"></s:ComboBox>
 	<s:ComboBox id="_idEstatus" x="300" y="21" width="81" change="dataChange();"
 				dataProvider="{SystemGlobals.ORDEN_ESTATUS}" fontWeight="bold"
-				labelField="_nombreEstatus"></s:ComboBox>
+				labelField="_nombreEstatus" tabIndex="1"></s:ComboBox>
 	<s:TextInput id="_fechaCreacion" x="148" y="21" width="70" contentBackgroundColor="#E7E7E7"
 				 enabled="false" fontWeight="bold" textAlign="center"/>
 	<s:TextInput id="_horaCreacion" x="224" y="21" width="70" contentBackgroundColor="#E7E7E7"
@@ -79,26 +79,25 @@
 			  label="Buscar Cliente" click="deleteDataAlert();"
 			  enabled="{_dataReady&amp;&amp;!_newData}"/>
 	<s:Button visible="{!_newData&amp;&amp;!_updateData}" x="389" y="138" width="114" height="24"
-			  label="Buscar Cliente" click="openPopUp(&quot;clientes.Clientes_Busqueda&quot;,true);"/>
-	<s:Button x="509" y="138" width="28" height="23"
-			  click="openPopUp(&quot;clientes.Clientes&quot;);"
-			  icon="@Embed(source='../../assets/Icons/Buttons/Edit.png')"
-			  skinClass="spark.skins.spark.ButtonSkin"/>
-	<s:TextInput id="_operador" x="71" y="232" width="310" change="dataChange();"/>
+			  label="Buscar Cliente" click="openPopUp(&quot;clientes.Clientes_Busqueda&quot;,true);"
+			  tabIndex="4"/>
+	<s:TextInput id="_operador" x="71" y="232" width="310" change="dataChange();" tabIndex="7"/>
 	<s:Label x="6" y="238" text="Operador :"/>
 	<s:Label x="16" y="205" text="Atendió :"/>
 	<s:ComboBox id="_idEmpleado" x="71" y="200" width="310" change="dataChange();"
-				dataProvider="{SystemGlobals.EMPLEADOS}" labelFunction="concatenateName" ></s:ComboBox>
+				dataProvider="{SystemGlobals.EMPLEADOS}" labelFunction="concatenateName"
+				tabIndex="6"></s:ComboBox>
 	<s:ComboBox id="_idContacto" x="71" y="169" width="310" change="dataChange();"
-				dataProvider="{_contactos}" labelFunction="concatenateName"></s:ComboBox>
+				dataProvider="{_contactos}" labelFunction="concatenateName" tabIndex="5"></s:ComboBox>
 	<s:Label x="14" y="175" text="Reportó :"/>
-	<s:TextInput id="_descripcionFalla" x="159" y="313" width="416" prompt="Descripción"/>
-	<s:TextInput id="_codigoFalla" x="72" y="313" width="79" prompt="Código"/>
+	<s:TextInput id="_descripcionFalla" x="159" y="313" width="416" prompt="Descripción"
+				 tabIndex="10"/>
+	<s:TextInput id="_codigoFalla" x="72" y="313" width="79" prompt="Código" tabIndex="9"/>
 	<s:Label x="73" y="515" color="#767474" fontSize="10" fontStyle="italic" text="observaciones"/>
 	<s:Label x="74" y="262" color="#767474" fontSize="10" fontStyle="italic" text="descripción"/>
 	<s:Label x="20" y="279" text="Equipo :"/>
 	<s:ComboBox id="_idEquipo" x="72" y="274" width="503" change="dataChange();"
-				dataProvider="{_equipos}" labelField="_descripcionCompleta"></s:ComboBox>
+				dataProvider="{_equipos}" labelField="_descripcionCompleta" tabIndex="8"></s:ComboBox>
 	<s:DataGrid id="_listaFallas" x="72" y="345" width="625" height="130"
 				dataProvider="{_fallasReportadas}" requestedRowCount="4"
 				selectionChange="onFailureSelect();">
@@ -111,7 +110,8 @@
 	</s:DataGrid>
 	<s:Label x="23" y="352" text="Fallas :"/>
 	<s:Label x="28" y="318" text="Falla :"/>
-	<s:TextArea id="_nota" x="72" y="527" width="625" height="67" change="dataChange();"/>
+	<s:TextArea id="_nota" x="72" y="527" width="625" height="67" change="dataChange();"
+				tabIndex="11"/>
 	<s:Button visible="{!_newData}" x="583" y="313" width="114" height="24"
 			  label="Agregar Falla" click="recordIssue();"
 			  enabled="{_dataReady&amp;&amp;!_newData}"/>
@@ -268,25 +268,7 @@
 			public function initView():void{
 				forceImports();
 				_MainService = _webApplication.getService(_serviceName);
-				_Data.exceptions = ["_idTecnico","_prediagnosticoUnidadTiempo","_descripcionClienteFalla","_creado",
-									"_idCodigoError","_prediagnosticoNumeroTiempo","_servicioNumeroTiempo",
-									"_habloCon","_modificadoPor","_fechaHabloCon","_modificado","_creadoPor","_servicioUnidadTiempo","_idCliente",
-									"_nombreCliente","_nombreEstatus","_importe",
-									"_totalRemisionar","_noRemision","_responsableAsignacionDeFecha",
-									"_domicilioServicio","_fechaServicioInicial","_formaPago","_fechaPagoInicial",
-									"_tecnicoAsignado","_seInformoVisitaA","_fechaPromesaVisita","_tiempoUnidadDiagnostico","_tiempoNumeroDiagnostico",
-									"_diasReparacion","_horaServInicial","_nombreTecnicoAsignado","_totalFacturar","_noFactura",
-									"_tipoCambio","_fechaCotizacion","_cantidadInicial","_responsableCotizacion","_idTecnicoDiagnostico","_idTecnicoAsignado",
-									"_tipoCambio","_fechaCotizacion","_fechaPreCotizacion","_cantidadInicial","_responsableCotizacion","_responsablePreCotizacion",
-									"_tipoTransporte","_costoManoObra","_costoRefaccion","_costoTransporte","_costoHotel","_costoComidas","_costoFleteSobreEquipaje",
-									"_costoGastosDiversos","_observacionesCotDiag","_cantidadComplemento","_importePagoInicial","_fechaPrePagoInicial",
-									"_preImporte",
-									"_observacionesAccServicio","_observacionesServicio","_observacionesClienteOrden","_fechaFinServicio","_horaFinServicio",
-									"_interesCliente","_tiempoNumeroPruebas","_tiempoUnidadPruebas","_tiempoNumeroTotalServ","_tiempoUnidadTotalServ","_finServicio",
-									"_tieneServicio","_tienePrediagnostico","_tieneCotizacionPrediagnostico","_tieneVentaPrediagnostico","_tieneConfirmacion",
-									"_tieneDiagnostico","_tieneCotizacionDiagnostico","_tieneVentaDiagnostico",
-									"_fechaDepositoVta","_importeDepositoVta","_formaPagoVta","_observacionesComplVta","_observacionesFacVta"
-									];
+				_Data.exceptions = [];
 				_MainService.addEventListener(FaultEvent.FAULT,onFault);
 				initData();
 				addValidations();
@@ -302,7 +284,7 @@
 			
 			
 			private function initData():void{
-				_MainService.getFields();
+				_MainService.getFields("columnsFromOrderAdministrationForm");
 				_MainService.getFields.addEventListener(ResultEvent.RESULT,onGetFieldsResult);
 				_dataReady = false;
 			}
@@ -433,12 +415,12 @@
 			}
 			
 			private function getData():void{
-				_MainService.getRecords();
-				_MainService.getRecords.addEventListener(ResultEvent.RESULT,onGetDataResult);
+				_MainService.getAllOrders();
+				_MainService.getAllOrders.addEventListener(ResultEvent.RESULT,onGetDataResult);
 			}
 			
 			private function onGetDataResult(e:ResultEvent):void{
-				_MainService.getRecords.removeEventListener(ResultEvent.RESULT,onGetDataResult);
+				_MainService.getAllOrders.removeEventListener(ResultEvent.RESULT,onGetDataResult);
 				_DataResult = Converter.arrayConverter(e.result);
 				if(_DataResult.length==0) {
 					Alert.show("No hay registros en la base de datos","Atención")
@@ -499,7 +481,6 @@
 			private function onCreateComplete(e:ResultEvent):void{				
 				_MainService.createRecord.removeEventListener(ResultEvent.RESULT,onCreateComplete);
 				_dataIndex = _DataResult.length;
-				Catalogs.reload();
 				getData();
 			}
 			
@@ -510,14 +491,12 @@
 			
 			private function onUpdateComplete(e:ResultEvent):void{
 				_MainService.updateRecord.removeEventListener(ResultEvent.RESULT,onUpdateComplete);
-				Catalogs.reload();
 				getData();
 			}
 			
 			private function onDeleteComplete(e:ResultEvent):void{
 				_MainService.deleteRecord.removeEventListener(ResultEvent.RESULT,onDeleteComplete);
 				_dataIndex = _DataResult.length-2;
-				Catalogs.reload();
 				getData();
 			}
 			
